--- a/.github/workflows/WS.yaml
+++ b/.github/workflows/WS.yaml
@@ -1,11 +1,18 @@
+name: Mend Prioritize Java with Maven
+
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main* ]
 
 jobs:
   build:
+    env:
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      WS_APIKEY: ${{secrets.APIKEY}}
+      WS_USERKEY: ${{secrets.USERKEY}}
+      WS_WSS_URL: https://saas-eu.mend.io/agent
+      WS_PRODUCTNAME: GHActions_${{github.event.repository.name}}
+      WS_PROJECTNAME: ${{github.event.repository.name}}_${{github.ref_name}}_Prioritize
 
     runs-on: ubuntu-latest
 
@@ -16,21 +23,30 @@ jobs:
       with:
         java-version: '8'
         distribution: 'adopt'
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
     - name: Build with Maven
       run: mvn clean install -DskipTests=true
     - name: WhiteSource Unified Agent Scan
       env:
-        WS_APIKEY: ${{secrets.APIKEY}}
-        WS_WSS_URL: https://saas-eu.whitesourcesoftware.com/agent
-        WS_PRODUCTNAME: GH_${{github.event.repository.name}}
-        WS_PROJECTNAME: ${{github.ref}}
+        WS_ENABLEIMPACTANALYSIS: true
         WS_RESOLVEALLDEPENDENCIES: false
         WS_MAVEN_RESOLVEDEPENDENCIES: true
-        WS_FILESYSTEMSCAN: true
+        WS_MAVEN_AGGREGATEMODULES: true
+        WS_FILESYSTEMSCAN: false
         WS_GENERATEPROJECTDETAILSJSON: true
       run: |
         curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
         echo Unified Agent downloaded successfully
-        java -jar wss-unified-agent.jar
-        curl -LJO https://raw.githubusercontent.com/whitesource-ft/ws-examples/main/Scripts/pipelinereports.sh
-        chmod +x ./pipelinereports.sh && ./pipelinereports.sh saas-eu
+        WARFILE=$(find ./ -type f -wholename "*/target/*.war")
+        echo $WARFILE will be added to appPath
+        java -jar wss-unified-agent.jar -appPath $WARFILE -d ./
+        curl -LJO https://raw.githubusercontent.com/mend-toolkit/mend-examples/main/Scripts/ghissue-eua.sh
+        chmod +x ./ghissue-eua.sh && ./ghissue-eua.sh
+        
